Move logic from qupath-app to root build.gradle
The qupath-app subproject really only builds the launcher jar - and the packaging is done in build.gradle.kts of the root project.